objects/Opportunity_Team__c.object
<CustomObject>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM (Biz Dev)</fullName>
                </value>
                <value>
                    <fullName>AM (CrowdCompass)</fullName>
                </value>
                <value>
                    <fullName>AM (CrowdTorch)</fullName>
                </value>
                <value>
                    <fullName>AM (CSN)</fullName>
                </value>
                <value>
                    <fullName>AM (Event)</fullName>
                </value>
                <value>
                    <fullName>AM (SMM)</fullName>
                </value>
                <value>
                    <fullName>AM (Survey)</fullName>
                </value>
                <value>
                    <fullName>AM (TPP)</fullName>
                </value>
                <value>
                    <fullName>AM Pre Sales (CSN)</fullName>
                </value>
                <value>
                    <fullName>CC Deal Assisted By</fullName>
                </value>
                <value>
                    <fullName>Cross Sell Referral By</fullName>
                </value>
                <value>
                    <fullName>CS (CSN)</fullName>
                </value>
                <value>
                    <fullName>CS (Event)</fullName>
                </value>
                <value>
                    <fullName>CS (Survey)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Biz Dev)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CrowdCompass)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CrowdTorch)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN CVB)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN SAT)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Event)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (SMM)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Survey)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Ticket Mob)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (TPP)</fullName>
                </value>
                <value>
                    <fullName>PA Rep</fullName>
                </value>
                <value>
                    <fullName>Pre Sales (CrowdCompass)</fullName>
                </value>
                <value>
                    <fullName>Pre Sales (CrowdTorch)</fullName>
                </value>
                <value>
                    <fullName>Pre Sales (CSN)</fullName>
                </value>
                <value>
                    <fullName>Pre Sales (CSN CVB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Team</relationshipLabel>
        <relationshipName>Opportunity_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team</label>
    <nameField>
        <displayFormat>OT-{00}</displayFormat>
        <label>Opportunity Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>